Chapter06/objects/Example__c.object
<CustomObject>
    <fields>
        <fullName>Automatic_Number__c</fullName>
        <displayFormat>AN-{YYYYMMDD}-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>This is autonumber magic!</inlineHelpText>
        <label>Automatic Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Examples</relationshipLabel>
        <relationshipName>Examples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>99.99</defaultValue>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Examples</relationshipLabel>
        <relationshipName>Examples</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateTimeValue__c</fullName>
        <formula>DATETIMEVALUE(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateTimeValue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Formula__c</fullName>
        <formula>TODAY() - 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Formula_with_Text__c</fullName>
        <formula>DATETIMEVALUE(&quot;1982-07-18 22:15:00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Time Formula with Text</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>DATE(1982,7,18)</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Encrypted__c</fullName>
        <label>Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Formula_Example__c</fullName>
        <formula>HYPERLINK(
  &quot;https://google.com/search?q=&quot; + Customer__r.Name, 
  &quot;Search on Google...&quot;,
  &quot;_blank&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Example</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiPicklist__c</fullName>
        <label>MultiPicklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi 1</fullName>
                </value>
                <value>
                    <fullName>Multi 2</fullName>
                </value>
                <value>
                    <fullName>Multi 3</fullName>
                </value>
                <value>
                    <fullName>Multi 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Formula__c</fullName>
        <formula>1 / 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Formula</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Area_Long__c</fullName>
        <label>Text Area Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rich__c</fullName>
        <label>Text Area Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>True_or_false__c</fullName>
        <defaultValue>false</defaultValue>
        <label>True or false?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Example</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Example Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Examples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Number</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  ISBLANK(Number__c),
  Number__c &gt; 1000
)</errorConditionFormula>
        <errorDisplayField>Number__c</errorDisplayField>
        <errorMessage>Number should be filled and must be greater then 1000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Example_Validation_Rule</fullName>
        <active>true</active>
        <description>This is a just an example</description>
        <errorConditionFormula>AND(
 ISBLANK( Date__c  ),
 ISBLANK(  Date_Time__c )
)</errorConditionFormula>
        <errorMessage>You should always fill Date or Date/Time fields</errorMessage>
    </validationRules>
</CustomObject>